--- a/main.css
+++ b/main.css
@@ -33,7 +33,7 @@ nav .nav-right-section a {
 }
 
 nav .nav-right-section .menu-icon {
-    background-image: url('https://www.pngrepo.com/png/315750/512/menu-grid-r.png');
+    background-image: url("https://www.pngrepo.com/png/315750/512/menu-grid-r.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
@@ -59,4 +59,55 @@ main .main-logo {
 
 main .main-logo img {
     width: 400px;
+}
+
+main .main-input {
+    width: 530px;
+    margin: 0 auto;
+    margin-bottom: 35px;
+}
+
+main .main-input-container {
+    width: 525px;
+    border-radius: 100px;
+    border: 1px solid #dfe1e5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+main .main-input-container input[type=search] {
+    width: 450px;
+    height: 40px;
+    border: none;
+    outline: none;
+    font-size: 15px;
+    padding: 25px 20px;
+}
+
+main .main-input-container:hover {
+    box-shadow: 0 1px 6px 0 #20212447;
+}
+
+main .main-input .search-icon {
+    background-image: url('https://img.icons8.com/android/24/000000/search.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    width: 18px;
+    height: 18px;
+    margin: 0 20px;
+    opacity: 0.7;
+}
+main .main-input .micro-icon{
+    background-image: url('https://www.gstatic.com/images/branding/googlemic/2x/googlemic_color_24dp.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    width: 18px;
+    height: 18px;
+    margin: 0 20px;
+}
+main .main-buttons{
+    
 }
