--- a/main.css
+++ b/main.css
@@ -10,7 +10,6 @@
 header {
     width: 100%;
     height: 70px;
-    background-color: whitesmoke;
 }
 
 header nav {
@@ -47,7 +46,7 @@ nav .nav-right-section img {
 }
 
 main {
-    margin-top: 350px;
+    margin-top: 300px;
     text-align: center;
 }
 
@@ -81,7 +80,7 @@ main .main-input-container input[type=search] {
     height: 40px;
     border: none;
     outline: none;
-    font-size: 15px;
+    font-size: 18px;
     padding: 25px 20px;
 }
 
@@ -96,7 +95,8 @@ main .main-input .search-icon {
     background-position: center;
     width: 18px;
     height: 18px;
-    margin: 0 20px;
+    margin-left: 20px;
+    margin-right: 5px;
     opacity: 0.7;
 }
 main .main-input .micro-icon{
@@ -109,5 +109,53 @@ main .main-input .micro-icon{
     margin: 0 20px;
 }
 main .main-buttons{
+    width: 530px;
+    margin: 0 auto;
+}
+main .main-buttons div{
+    display: inline-block;
+}
+main .main-buttons button{
+    padding: 10px 15px;
+    background-color: #f8f9fa;
+    outline: none;
+    border: none;
+    color: #474b4e;
+    border-radius: 2px;
     
+}
+main .main-buttons button:hover{
+    box-shadow: 0px 0px 2px 0px rgb(134, 134, 134);
+    
+}
+footer{
+    width: 100%;
+    height: 50px;
+    position: absolute;
+    bottom: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    font-size: 15px;
+    background-color: #f2f2f2;
+    border-top: 1px solid #e4e4e4;
+}
+footer ul{
+    margin:10px;
+    display: flex;
+    
+    padding-left: 0;
+}
+footer .footer-left{
+    justify-self: left;
+}
+footer .footer-right{
+    justify-self: right;
+}
+footer ul li a{
+    margin: 10px;
+    color: gray;
+}
+footer ul li a:hover{
+    text-decoration: underline;
 }
